<resources>
    <string name="app_name">My Application</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="staff">Staff</string>
    <string name="welcome">Welcome</string>
    <string name="guest">Guest</string>
    <string name="next1">Continue</string>
    <string name="phone">Phone</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_up2">Sign Up</string>
    <string name="please_check_email">Please check email</string>
    <string name="sign_up3">Sign Up</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up4">Sign Up</string>
    <string name="welcome1">Welcome</string>
    <string name="main_menu">Main Menu</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="next2">Continue</string>
    <string name="next3">Continue</string>
    <string name="menu">menu</string>
    <string name="forgot_password">TextView</string>
    <string name="registered_email">Registered email</string>
    <string name="next">Button</string>
    <string name="Next">Button</string>
    <string name="textview">TextView</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="password_reset_n_please_sign_in_again">Password reset.\n Please sign in again.</string>
    <string name="textview2">TextView</string>
    <string name="textview1">TextView</string>
    <string name="todo">TODO</string>
    <string name="textview3">TextView</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="add">Add</string>
    <string name="textview7">TextView</string>
    <string name="sign_in1">Sign In</string>
    <string name="password1">Password</string>
    <string name="account1">Account</string>
    <string name="textview8">TextView</string>
    <string name="Menu" />
    <string name="next4">Next</string>
    <string name="reset_password">Reset Password</string>
    <string name="next5">Next</string>
    <string name="next6">Next</string>
    <string name="reset_password1">Reset Password</string>
    <string name="abc_kitchen">ABC Kitchen</string>
    <string name="notification">Notification</string>
    <string name="sign_out">Sign Out</string>
    <string name="location">Location</string>
    <string name="guest_information">Guest Information</string>
    <string name="reservation">Reservation</string>
    <string name="forgot_password2">Forgot password?</string>
    <string name="menu1">Menu</string>
    <string name="next7">Next</string>
    <string name="please_check_email1">Please check email</string>
    <string name="edit">Edit</string>
    <string name="textview9">TextView</string>
    <string name="staff_sign_in">Staff Sign In</string>
    <string name="menu2">Menu</string>
    <string name="welcome2">Welcome</string>
    <string name="change_password">Change Password</string>
    <string name="guest_information1">Guest Information</string>
</resources>