<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/staff"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_bias="0.801"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="191dp"
        android:layout_height="176dp"
        android:contentDescription="@string/abc_kitchen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="313dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        tools:ignore="Don't have an account?,TextSizeCheck" />

    <Button
        android:id="@+id/button12"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:layout_marginBottom="176dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.82"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="#009688"
        android:text="@string/forgot_password2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>