<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestInfo"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/abc_kitchen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/guest_information1"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Guest Information" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="124dp"
            android:contentDescription="@string/notification"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_notify" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/sign_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_signout" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:srcCompat="@drawable/icon_location" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView18"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:srcCompat="@drawable/icon_menu" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/reservation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView19"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:srcCompat="@drawable/icon_reservation" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/guest_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_guest" />


    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#2196F3"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.826" />

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="418dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <ListView
            android:id="@+id/list_item"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="50dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>