<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="122dp"
        android:layout_height="62dp"
        android:contentDescription="@string/abc_kitchen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Password"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="Change Password" />

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/notification"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_notify" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_signout" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView44"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView42"
        app:srcCompat="@drawable/icon_menu" />

    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:contentDescription="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView44"
        app:srcCompat="@drawable/icon_location" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:contentDescription="@string/guest_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView43"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_guest" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:contentDescription="@string/reservation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView43"
        app:srcCompat="@drawable/icon_reservation" />

</androidx.constraintlayout.widget.ConstraintLayout>