<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffReservation"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="41dp"
            android:backgroundTint="#2196F3"
            android:text="@string/edit"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.81"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView63"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView62"
            app:srcCompat="@drawable/icon_location" />

        <ImageView
            android:id="@+id/imageView61"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView62"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView60"
            app:srcCompat="@drawable/icon_menu" />

        <ImageView
            android:id="@+id/imageView62"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/reservation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView63"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView61"
            app:srcCompat="@drawable/icon_reservation" />

        <ImageView
            android:id="@+id/imageView60"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/guest_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView61"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_guest" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/abc_kitchen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Table Reservation"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:ignore="Table Reservation" />

        <ImageView
            android:id="@+id/imageView58"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="76dp"
            android:contentDescription="@string/notification"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_notify"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView59"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="76dp"
            android:contentDescription="@string/sign_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_signout"
            tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>