<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Location"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:contentDescription="@string/abc_kitchen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Our Location"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="Our Location" />

        <ImageView
            android:id="@+id/imageView34"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/notification"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_notify" />

        <ImageView
            android:id="@+id/imageView35"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/sign_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_signout" />

        <ImageView
            android:id="@+id/imageView39"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView38"
            app:srcCompat="@drawable/icon_location" />

        <ImageView
            android:id="@+id/imageView37"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView38"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView36"
            app:srcCompat="@drawable/icon_menu" />

        <ImageView
            android:id="@+id/imageView36"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/guest_information"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView37"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/icon_guest" />

        <ImageView
            android:id="@+id/imageView38"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/reservation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView39"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView37"
            app:srcCompat="@drawable/icon_reservation" />

</androidx.constraintlayout.widget.ConstraintLayout>